--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 VITE_AMAP_KEY=c2cb44bdf8a014380a909e6445befd39
 
 # 后端接口基础地址 (Base URL)
-VITE_API_BASE_URL=http://10.0.3.4:5000/api
+VITE_API_BASE_URL=http://10.0.3.4:5000
